crates/strider-analyze/tests/snapshots/x86_kernel__calls__mutual_a.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401140:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "10" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "10" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v15" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x40112f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "22" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
